css/styles.css
/* ... */
.fix-nav-container {
  display: flex;
  position: relative;
  left: 50%;
  transform: translate(-50%);
  max-width: 1080px;
}

.initials-container {
  width: 200px;
}

.initials-container img {
  height: 80px;
  width: 100%;
}

#initials {
  position: relative;
}

.nav-container {
  display: flex;
  line-height: 80px;
  width: 80%;
}

.nav-cont-button {
  margin: 0 50px;
}

.nav-cont-button a {
  transition: color 0.3s;
  text-decoration: none;
}

.nav-cont-button a:hover {
  color: var(--highlights);
  cursor: pointer;
}

.dropdown-menu-container {
  background-color: var(--section-background-color);
  display: flex;
  flex-direction: column;
  max-height: 0;
  transition: max-height 0.5s ease-in-out;
  position: absolute;
  overflow: hidden;
  overflow-y: scroll;
  margin-top: 1px;
  margin-left: -85px;
  max-width: auto;
  z-index: 10;
  line-height: 20px;
}

.dropdown-menu-container a {
  margin: 0.3rem 0.5rem 0.3rem 0.5rem;
  padding: 0.5rem 1rem 0.5rem 1rem;
  border: dashed 1px var(--highlights);
  transition: all 0.3s ease-in-out;
  font-size: 1rem;
}

.dropdown-menu-container a:hover {
  border: dashed 1px var(--text);
}

.nav-cont-button:hover .dropdown-menu-container,
.nav-cont-button:focus .dropdown-menu-container {
  max-height: 380px;
}

.fixed-socials {
  max-width: 40px;
  display: block;
  position: fixed;
  top: 50%;
  right: 20px;
  z-index: 5;
}

.fixed-socials a {
  max-width: 40px;
}

.fixed-socials img {
  background-color: var(--section-background-color);
  border-radius: 10px;
  max-width: 40px;
  transition: scale 0.1s ease-in-out;
}

.fixed-socials img:hover {
  scale: 1.1;
}

header {
  background-image: url("../images/headerbg.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.header-container {
  max-width: 1080px;
  margin-top: 80px;
  position: relative;
  left: 50%;
  transform: translate(-50%);
  display: flex;
}

.header-container h1 {
  color: var(--highlights);
  font-size: 80px;
  text-align: center;
  text-decoration: none;
}

.header-container p {
  width: 90%;
  position: relative;
  left: 50%;
  transform: translate(-50%);
  margin-bottom: 50px;
}

.header-buttons {
  width: 90%;
  position: relative;
  left: 50%;
  transform: translate(-50%);
  display: flex;
  margin-bottom: 50px;
}

.header-button {
  background-color: var(--burgandy-buttons);
  margin: 5px;
  border-radius: 5px;
  padding: 15px;
  transition: background-color 0.3s ease;
  text-decoration: none;
}

.header-button:hover {
  background-color: var(--highlights);
  cursor: pointer;
}

.about-me {
  display: flex;
  flex-direction: column;
  max-width: 1080px;
  margin: 0 auto;
  padding-top: 6rem;
  padding-bottom: 2rem;
}

.about-me img {
  max-width: 30%;
  margin: 0 auto;
  border-radius: 1rem;
}

#skills-title {
  max-width: 1080px;
  position: relative;
  left: 50%;
  transform: translate(-50%);
  text-align: center;
}

#skills-title h2 {
  color: var(--highlights);
  font-size: var(--project-name-font-size-2rem);
  text-decoration: var(--text-decoration-underline-dashed);
  margin: 0 0 2rem 0;
}

.skills-container-bg {
  background-color: var(--section-background-color);
  padding: 40px;
}

.skills-container {
  display: flex;
  max-width: 1080px;
  position: relative;
  left: 50%;
  transform: translate(-50%);
}

#display-skills {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: auto;
}

#display-skills img{
  max-width: 5rem;
  max-height: 5rem;
  margin: 0.2rem;
  border-radius: 1.5rem;
  border: dashed 2px var(--highlights);
}

.used-technologies {
  display: flex;
  flex-wrap: wrap;
  justify-self: center;
}

.used-technologies img {
  max-width: 3rem;
  max-height: 3rem;
  border-radius: 0.8rem;
  border: dashed 2px var(--highlights);
  margin: 0.2rem;
}

.about-me-left {
  width: 50%;
}

.about-me-text {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.about-me-text h2 {
  color: var(--highlights);
  font-size: var(--project-name-font-size-2rem);
  text-decoration: var(--text-decoration-underline-dashed);
}

.about-me-right {
  width: 50%;
}

.about-me-right h2 {
  color: var(--highlights);
  font-size: var(--project-name-font-size-2rem);
  text-decoration: var(--text-decoration-underline-dashed);
}

#most-used-languages {
  margin: 0 auto;
}

#skeleton-languages-table {
  background: linear-gradient(
    to right,
    var(--background-color),
    rgba(22, 177, 181, 0.2),
    var(--background-color)
  );
  background-size: 200%;
  display: flex;
  flex-direction: column;
  width: 20rem;
  border-radius: 0.5rem;
  padding: 1rem;
  animation: skeleton-background-position-animation 1.5s ease-in-out infinite;
}

@keyframes skeleton-background-position-animation {
  0% {
    background-position: 0%;
  }
  50% {
    background-position: 100%;
  }
  100% {
    background-position: 0%;
  }
}

.skeleton-languages-background {
  background-color: var(--burgandy-buttons);
  margin-top: 0.5rem;
  border-radius: 0.25rem;
  box-shadow: inset 0 0 2px var(--background-color);
  animation: skeleton-pulse-animation 500ms linear infinite;
}

@keyframes skeleton-pulse-animation {
  0% {
    opacity: 20%;
  }
  50% {
    opacity: 100%;
  }
  100% {
    opacity: 20%;
  }
}

.skeleton-languages-header-text {
  color: var(--highlights);
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.3rem;
}

.skeleton-languages-procentage-text {
  color: var(--text);
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.1rem;
  padding-left: 0.5rem;
}

.skeleton-languages-text {
  color: var(--highlights);
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1rem;
  padding-top: 0.3rem;
}

#languages-table {
  background-color: var(--background-color);
  display: flex;
  flex-direction: column;
  width: 20rem;
  border-radius: 0.5rem;
  padding: 1rem;
}

.languages-background {
  background-color: var(--burgandy-buttons);
  margin-top: 0.5rem;
  border-radius: 0.25rem;
  box-shadow: inset 0 0 2px var(--background-color);
}
/* ... */

